--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,19 +9,15 @@
 		/>
 
 		<!-- SEO -->
-		<link rel="canonical" href="https://hastebin.skyra.pw" />
-		<meta name="url" content="https://hastebin.skyra.pw" />
-		<meta name="identifier-URL" content="https://hastebin.skyra.pw" />
-		<meta name="shortlink" content="https://hastebin.skyra.pw" />
+		<link rel="canonical" href="https://bin.ptero.ovh" />
+		<meta name="url" content="https://bin.ptero.ovh" />
+		<meta name="identifier-URL" content="https://bin.ptero.ovh" />
+		<meta name="shortlink" content="https://bin.ptero.ovh" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="keywords" content="haste, bin, skyra, hastebin, paste, pastebin" />
+		<meta name="keywords" content="haste, bin, hastebin, paste, pastebin" />
 		<meta name="subject" content="Hastebin for developers, by developers." />
 		<meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate" />
 		<meta name="googlebot" content="index,follow" />
-		<meta name="author" content="Skyra Project, contact@skyra.pw" />
-		<meta name="owner" content="Skyra Project, contact@skyra.pw" />
-		<meta name="designer" content="Skyra Project, contact@skyra.pw" />
-		<meta name="reply-to" content="contact@skyra.pw" />
 		<meta name="target" content="all" />
 		<meta name="audience" content="all" />
 		<meta name="coverage" content="Worldwide" />
@@ -36,7 +32,6 @@
 		<meta name="msapplication-TileImage" content="/seo/mstile-144x144.png" />
 		<meta name="msapplication-config" content="/seo/browserconfig.xml" />
 		<meta name="revisit-after" content="7 days" />
-		<meta property="og:email" content="contact@skyra.pw" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<meta http-equiv="Expires" content="1y" />
